fix (UI) update tree button visibility and improve CSS transitions

--- a/pages/main-page/css/main-page.css
+++ b/pages/main-page/css/main-page.css
@@ -556,7 +556,7 @@ font-size: 18px;
     font-size: 20px;
     color: white;
     gap: 5px;
-    transition: 0.2s;
+    transition: 0.5s;
     overflow: hidden;
 }
 .tree-button:active {
@@ -570,9 +570,9 @@ font-size: 18px;
 	left: 50%;
 	width: 0;
 	height: 100%;
-	background: #000;
+	background: #0000004c;
 	z-index: -1;
-	transition: all 0.5s ease-in-out;
+	transition: all 0.2s ease-in-out;
 	transform: translateX(-50%);
 }
 .tree-button:hover::before,
@@ -1056,8 +1056,8 @@ font-size: 18px;
  }
  .navigation ul li a .icon img  {
 	position: relative;
-	height: 30px;
-	width: 30px;
+	height: 27px;
+	width: 27px;
 	filter: invert(1);
    transition: 0.5s;
  }
@@ -1070,7 +1070,7 @@ font-size: 18px;
 
  .navigation ul li a .text {
 	position: absolute;
-	color: black;
+	color: #956afa;
 	font-family: 'Balsamiq Sans', cursive;
 	font-weight: 700;
 	font-size: 0.6em;
@@ -1091,7 +1091,7 @@ font-size: 18px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: 0.5;
+	transition: 0.5s;
  }
  .indicator::before{
 	content: '';
@@ -1099,7 +1099,7 @@ font-size: 18px;
 	bottom: 14px;
 	width: 100%;
 	height: 14px;
-	background-color: #ffffff;
+	background-color: #212121;
 	border-radius: 10px;
  }
  .navigation ul li:nth-child(1).active ~ .indicator{
@@ -1512,7 +1512,6 @@ flex-direction: column;
 	text-align: center;
 	color: #ffffff;
 	margin: 100px auto 10% auto;
-	box-shadow: 0px -1px 2px 0px rgb(255 255 255 / 25%), 0px 2px 4px 1px rgb(0 0 0 / 45%);
 	border-radius: 10px;
 	max-width: 80%;
 	padding: 5px;
@@ -1627,7 +1626,6 @@ flex-direction: column;
     text-align: center;
     color: #ffffff;
     margin: 100px auto 10% auto;
-    box-shadow: 0px -1px 2px 0px rgb(255 255 255 / 25%), 0px 2px 4px 1px rgb(0 0 0 / 45%);
     border-radius: 10px;
     max-width: 80%;
     padding: 5px;
